Unity/Assets/akanevrc/TeuchiUdon/Tests/src/Statements/LetBindMutTuple3.teuchi
// error
{
  let (x, mut y) = ("ng", "ng");
  x <- "ok";
  UnityEngine.Debug.Log(x);
};
